--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
 <head>
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
-  <ol> <!-- 부모 -->
-    <li><a href="1.html">HTML</a></li> <!-- 자식 -->
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
+  <div id="grid">
+    <h1><a href="index.html"><font color="gray">WEB</font></a></h1>
+    <ol> <!-- 부모 -->
+      <li><a href="1.html"><font color="gray">HTML</font></a></li> <!-- 자식 -->
+      <li><a href="2.html"><font color="gray">CSS</font></a></li>
+      <li><a href="3.html"><font color="gray">JavaScript</font></a></li>
+    </ol>
+    <div id="article">
+      <h2>WEB</h2>
 
-  <h2>WEB</h2>
+      <p>The World Wide Web (WWW), also called the Web, is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and accessible via the Internet. English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser in 1990 while employed at CERN in Switzerland. The browser was released outside CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
 
-  <p>The World Wide Web (WWW), also called the Web, is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and accessible via the Internet. English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser in 1990 while employed at CERN in Switzerland. The browser was released outside CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
+      The World Wide Web has been central to the development of the Information Age and is the primary tool billions of people use to interact on the Internet. Web pages are primarily text documents formatted and annotated with Hypertext Markup Language (HTML). In addition to formatted text, web pages may contain images, video, audio, and software components that are rendered in the user's web browser as coherent pages of multimedia content.
 
-  The World Wide Web has been central to the development of the Information Age and is the primary tool billions of people use to interact on the Internet. Web pages are primarily text documents formatted and annotated with Hypertext Markup Language (HTML). In addition to formatted text, web pages may contain images, video, audio, and software components that are rendered in the user's web browser as coherent pages of multimedia content.
+      Embedded hyperlinks permit users to navigate between web pages. Multiple web pages with a common theme, a common domain name, or both, make up a website. Website content can largely be provided by the publisher, or interactively where users contribute content or the content depends upon the users or their actions. Websites may be mostly informative, primarily for entertainment, or largely for commercial, governmental, or non-governmental organisational purposes.</p>
 
-  Embedded hyperlinks permit users to navigate between web pages. Multiple web pages with a common theme, a common domain name, or both, make up a website. Website content can largely be provided by the publisher, or interactively where users contribute content or the content depends upon the users or their actions. Websites may be mostly informative, primarily for entertainment, or largely for commercial, governmental, or non-governmental organisational purposes.</p>
-
-  <img src="https://source.unsplash.com/1600x900/?nature" width="70%">
-
+      <img src="https://source.unsplash.com/1600x900/?nature" width="100%">
+    </div>
+  </div>
 </body>
 </html>
